syntax = "proto3";

package product.api.product.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";
import "query/operation.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "product/api/product/v1/common.proto";
import "product/api/category/v1/category.proto";
import "product/api/price/v1/price.proto";


option go_package = "github.com/go-saas/kit/product/api/product/v1;v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  security_definitions: {
    security: {
      key: "bearer"
      value: {
        type: TYPE_API_KEY
        in: IN_HEADER
        name: "Authorization"
        description: "Authentication token, prefixed by Bearer: Bearer <token>"
      }
    }
  }
  security: {
    security_requirement: {
      key: "bearer"
    }
  }
  info:{
    title:"Product"
  }
};

service ProductService {
  rpc ListProduct (ListProductRequest) returns (ListProductReply){
    option (google.api.http) = {
      get: "/v1/product",
      additional_bindings:{
        post:"/v1/product/list",
        body:"*"
      }
    };
  }
  rpc GetProduct (GetProductRequest) returns (Product){
    option (google.api.http) = {
      get: "/v1/product/{id}"
    };
  }
  rpc CreateProduct (CreateProductRequest) returns (Product){
    option (google.api.http) = {
      post: "/v1/product",
      body: "*"
    };
  }
  rpc UpdateProduct (UpdateProductRequest) returns (Product){
    option (google.api.http) = {
      put: "/v1/product/{product.id}",
      body: "*"
      additional_bindings{
        patch: "/v1/product/{product.id}",
        body: "*"
      }
    };
  }
  rpc DeleteProduct (DeleteProductRequest) returns (DeleteProductReply){
    option (google.api.http) = {
      delete: "/v1/product/{id}"
    };
  }

}

message CreateProductRequest {

  string title =10 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];
  string short_desc=11;
  string desc=12;

  ProductMedia main_pic=13;
  repeated ProductMedia medias=14;

  repeated Badge badges=15;

  google.protobuf.Timestamp visible_from=16;
  google.protobuf.Timestamp visible_to=17;

  bool is_new=18;

  optional string main_category_key= 40;
  repeated string category_keys=41;

  string barcode=19;

  string model=20;

  optional string brand_id=21;

  bool is_saleable=22;

  google.protobuf.Timestamp saleable_from=23;
  google.protobuf.Timestamp saleable_to=24;

  repeated Keyword keywords=25;
  repeated .product.api.price.v1.PriceParams prices=26;

  bool is_giveaway=27;

  repeated ProductAttribute attributes=43;

  bool multi_sku=50;

  repeated CampaignRule campaign_rules=60;

  bool need_shipping=61;

  repeated Stock stocks=62;

  google.protobuf.Struct content=63;

  bool active=100;
}


message UpdateProductRequest {
  UpdateProduct product=1 [(validate.rules).message.required=true,(google.api.field_behavior) = REQUIRED];
  google.protobuf.FieldMask update_mask = 2;
}

message UpdateProduct{
  string id=1 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];

  string version=7;

  string title =10 [(validate.rules).string.min_len=1,(google.api.field_behavior) = REQUIRED];
  string short_desc=11;
  string desc=12;

  ProductMedia main_pic=13;
  repeated ProductMedia medias=14;

  repeated Badge badges=15;

  google.protobuf.Timestamp visible_from=16;
  google.protobuf.Timestamp visible_to=17;

  bool is_new=18;

  optional string main_category_key= 40;
  repeated string category_keys=41;

  string barcode=19;

  string model=20;

  optional string brand_id=21;

  bool is_saleable=22;

  google.protobuf.Timestamp saleable_from=23;
  google.protobuf.Timestamp saleable_to=24;

  repeated Keyword keywords=25;

  //could update or create new prices
  repeated .product.api.price.v1.PriceParams prices=26;

  bool is_giveaway=27;

  repeated ProductAttribute attributes=43;

//  bool multi_sku=50;

  repeated CampaignRule campaign_rules=60;

  bool need_shipping=61;

  repeated Stock stocks=62;

  google.protobuf.Struct content=63;

  bool active=100;
}


message DeleteProductRequest {
  string id=1;
}
message DeleteProductReply {
  string id=1;
}

message GetProductRequest {
  string id=1 [(validate.rules).string.min_len=1,(google.api.field_behavior)=REQUIRED];
}

message ProductFilter{
  query.operation.StringFilterOperation id=1;
  query.operation.StringFilterOperation name =2;
  query.operation.BooleanFilterOperators internal = 3;
}

message ListProductRequest {
  int32 page_offset =1;
  int32 page_size = 2;
  string search = 3;
  repeated string sort =4;
  google.protobuf.FieldMask fields=5;
  ProductFilter filter =6;
}

message ListProductReply {
  int32 total_size =1;
  int32 filter_size =2;
  repeated Product items=3;
}

message Product{
  string id=1;

  google.protobuf.Timestamp created_at =4;
  google.protobuf.Timestamp updated_at =5;
  string tenant_id=6;
  string version=7;


  string title =10 ;
  string short_desc=11;
  string desc=12;

  ProductMedia main_pic=13;
  repeated ProductMedia medias=14;

  repeated Badge badges=15;

  google.protobuf.Timestamp visible_from=16;
  google.protobuf.Timestamp visible_to=17;

  bool is_new=18;


  string barcode=19;

  string model=20;

  optional string brand_id=21;

  google.protobuf.Timestamp saleable_from=23;
  google.protobuf.Timestamp saleable_to=24;

  repeated Keyword keywords=25;
  repeated .product.api.price.v1.Price prices=26;

  bool is_giveaway=27;

  string main_category_key= 40;

  .product.api.category.v1.ProductCategory main_category=41;
  repeated .product.api.category.v1.ProductCategory categories=42;


  repeated ProductAttribute attributes=43;

  bool multi_sku=50;

  repeated CampaignRule campaign_rules=60;

  bool need_shipping=61;
  repeated Stock stocks=62;

  google.protobuf.Struct content=63;

  ProductManageInfo manage_info=100;

  bool active=101;
}

message ProductManageInfo{
  bool managed=1;
  string managed_by=2;
  google.protobuf.Timestamp last_sync_time=3;
}